# texalgo

./: .gitignore  CMakeLists.txt  README.md
libraries/: CMakeLists.txt
libraries/include/introductory/: bit-strings.cpp  coin-piles.cpp  increasing-array.cpp  missing-number.cpp  number-spiral.cpp  palindrome-reorder.cpp  permutations.cpp  repetitions.cpp  trailing-zeros.cpp  two-knights-recursive.cpp  two-knights.cpp  two-sets.cpp  weird-algorithm.cpp
libraries/include/libraries/: list.h  matrix.h  texvector.h  utils.h
libraries/include/sorting-searching/: apartments.cpp  distinct-numbers.cpp
libraries/src/: list.cpp  maxsubsum.cpp
standalone/: CMakeLists.txt  main.cpp
